class_Type and Swagger API docs
